registro y login funcionando

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Guth</string>
+    <string-array name="tipo_array">
+        <item>Usuario</item>
+        <item>Administrador</item>
+    </string-array>
 </resources>
