--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="action_settings">Salir</string>
 
     <string name="menu_home">Home</string>
+    <string name="menu_acerca">Acerca</string>
 </resources>
